--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,6 @@
         <activity android:name=".NativeAdActivity" />
         <activity android:name=".BannerAdActivity" />
         <activity android:name=".InterstitialAdActivity" />
-        <activity android:name=".VideoAdActivity" />
 
         <activity android:name=".AboutActivity"
             android:screenOrientation="portrait"
@@ -52,6 +51,12 @@
         <activity
             android:name="com.facebook.ads.InterstitialAdActivity"
             android:configChanges="keyboardHidden|orientation|screenSize">
+        </activity>
+
+        <activity
+            android:name="com.xinmei.adsdk.nativeads.AppWall"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
         </activity>
 
         <receiver android:name="com.kika.pluto.filter.KoalaAppInstallReceiver" >
